eks/pocketbase/pocketbase-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketbase
  namespace: cleo
  labels:
    app: pocketbase
    tier: backend
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocketbase
  template:
    metadata:
      labels:
        app: pocketbase
        tier: backend
    spec:
      containers:
      - name: pocketbase
        image: 235494787311.dkr.ecr.us-east-2.amazonaws.com/pocketbase:latest  
        ports:
        - containerPort: 8091
        command: ["/pb/pocketbase", "serve", "--http=0.0.0.0:8091"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"

      imagePullSecrets:
      - name: ecr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: pocketbase-service
  namespace: cleo
  labels:
    app: pocketbase
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 8091
    targetPort: 8091
    protocol: TCP
  selector:
    app: pocketbase
